﻿Artificial VCM 1.0.1.6474 2017-09-22

New features:
 - Implementation of Artificial VCM.

Artificial VCM 1.0.2.6484 2017-10-02

New features:
 - Changed agents configuration and the algorithm according to the latest specification Artificial VCM 1.1.

Artificial VCM 1.0.3.6485 2017-10-02

Fixed bugs:
 - Fixed the formula of agent(i)_c(t=1).
 - Fixed the formula of agent(i)_common_profit(t=0).
 
Artificial VCM 1.0.4.6486 2017-10-04

New features:
 - Added additional information for testing purposes.

Fixed bugs:
 - Fixed output value (average contribution).

Artificial VCM 1.0.5.6487 2017-10-05

New features:
 - Changed the formula of anticipated influence calculation.
 - Added KH consequent value to the details column in AgentDetailsOutput

Artificial VCM 1.0.6.6489 2017-10-06

New features:
 - Changed configuration.json according to Artificial VCM 3